--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,72 @@
-.app {
-  height: 100vh;
-  display: flex;
-  background-color: #020230;
-  color: white;
+footer {
+  position:absolute;
+  left:0;
+  bottom:0;
+  right:0;
 
 }
 
+.gameOverText {
+
+}
+
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800;
+  margin-top: 80px;
+  line-height: 1.5em;
+  letter-spacing: .1em;
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #0e0124;
+}
+.big{
+  text-transform: uppercase;
+  font-size: 50px;
+  color: rgb(173, 106, 17);
+  text-decoration: underline wavy rgb(196, 196, 207) 5px;
+
+}
+
+.copyRight{
+    position: absolute;
+    width: 100%;
+    color: #fff;
+    line-height: 40px;
+    font-size: 1rem;
+    text-align: center;
+    bottom:0;
+}
+
+.startScreen {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  color: white;
+  background-color: #020230;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+
+}
+
+.app {
+  display: flex;
+  background-color: #020230;
+  color: white;
+}
+
 .main {
-  width: 75%;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #19191f),
     url("https://wallpaperaccess.com/full/2384073.jpg") center;
   display: flex;
@@ -15,24 +74,21 @@
 }
 
 .pyramid {
-  width: 25%;
   background-color: #020230;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
 }
 
 .moneyList {
   padding: 20px;
-  list-style: none;
   width: 100%;
 }
 
 .moneyListItem {
-  display: flex;
-  align-items: center;
   padding: 5px;
   border-radius: 5px;
+  border-style: groove;
+  border-color: aliceblue;
+  border-width: medium;
 }
 
 .moneyListItem.active {
@@ -40,7 +96,6 @@
 }
 
 .moneyListItemNumber {
-  width: 30%;
   font-size: 18px;
   font-weight: 100;
 }
@@ -64,9 +119,39 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  bottom: 10px;
+  top: 30px;
   left: 80px;
   font-size: 30px;
+  font-weight: 700;
+}
+
+.change {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 30px;
+  left: 180px;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.fifty {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 30px;
+  left: 280px;
+  font-size: 20px;
   font-weight: 700;
 }
 
@@ -91,6 +176,8 @@
   border-radius: 10px;
   border: 2px solid white;
   font-size: 20px;
+  position: relative;
+  top: 10px;
 }
 
 .answers {
@@ -111,6 +198,7 @@
   font-weight: 300;
   font-size: 20px;
   cursor: pointer;
+  position: relative;
 }
 
 .answer:hover,
@@ -123,16 +211,19 @@
 }
 
 @keyframes correct {
+
   0%,
   22%,
   42% {
     background: mediumblue;
   }
+
   20%,
   40%,
   60% {
     background: linear-gradient(#0e0124, #22074d);
   }
+
   62%,
   100% {
     background: green;
@@ -144,23 +235,32 @@
 }
 
 @keyframes wrong {
+
   0%,
   22%,
   42% {
     background: mediumblue;
   }
+
   10%,
   40%,
   60% {
     background: linear-gradient(#0e0124, #22074d);
   }
+
   62%,
   100% {
     background: crimson;
   }
 }
 
-.gameOverText {
+.timesup {
+  /* width: 250px;
+  height: 100px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   position: relative;
   top: 0;
   bottom: 0;
@@ -170,20 +270,19 @@
 }
 
 
-
 .start {
   width: 250px;
   height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  /* position: relative;
+  justify-content: space-around;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto; */
+  margin: auto;
 }
 
 .startInput {
@@ -202,10 +301,7 @@
 
 .startButton {
   width: 100%;
-  height: 30px;
-  border: none;
-  border-radius: 5px;
   cursor: pointer;
-  font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
+  text-align: center;
 }
